// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button in default state matches snapshot 1`] = `
.c0 {
  display: inline-flex;
  justify-content: center;
  align-items: center;
  text-decoration: none;
  transition: all 0.05s ease-in-out;
  border: 2px solid;
  font-weight: 600;
  border-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  font-family: -apple-system,system-UI,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif;
  font-size: 1rem;
  line-height: 1.5em;
  cursor: pointer;
  line-height: 1.25rem;
  color: #fff;
  background-color: #2a2a2a;
  border-color: #2a2a2a;
}

.c0:hover:not(:disabled),
.c0:focus:not(:disabled) {
  color: #fff;
  background-color: #f9423a;
  border-color: #f9423a;
}

.c0:disabled {
  opacity: 0.6;
}

@media screen and (min-width: 40em) {
  .c0 {
    line-height: 1.5em;
  }
}

@media screen and (min-width: 52em) {
  .c0 {
    line-height: 1.666em;
  }
}

@media screen and (min-width: 40em) {
  .c0 {
    line-height: 1.25rem;
  }
}

@media screen and (min-width: 52em) {
  .c0 {
    line-height: 1.25rem;
  }
}

@media screen and (min-width: 64em) {
  .c0 {
    line-height: 1.25rem;
  }
}

<button
  class="c0"
  color="default"
>
  text
</button>
`;

exports[`Button in loading state matches snapshot 1`] = `
.c1 {
  display: inline-flex;
  text-align: center;
  margin-top: 8px;
  margin-bottom: 8px;
}

.c1 >div {
  background-color: #f4f4f4;
  width: 0.5rem;
  height: 0.5rem;
  border-radius: 100%;
  display: inline-block;
  animation: sk-bouncedelay 1.4s infinite ease-in-out both;
}

.c1 >div:nth-child(1) {
  animation-delay: -0.3s;
}

.c1 >div:nth-child(2) {
  animation-delay: -0.15s;
}

.c0 {
  display: inline-flex;
  justify-content: center;
  align-items: center;
  text-decoration: none;
  transition: all 0.05s ease-in-out;
  border: 2px solid;
  font-weight: 600;
  border-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  font-family: -apple-system,system-UI,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif;
  font-size: 1rem;
  line-height: 1.5em;
  cursor: no-drop;
  line-height: 1.25rem;
  color: #fff;
  background-color: #2a2a2a;
  border-color: #2a2a2a;
}

.c0:hover:not(:disabled),
.c0:focus:not(:disabled) {
  color: #fff;
  background-color: #f9423a;
  border-color: #f9423a;
}

@media screen and (min-width: 40em) {
  .c0 {
    line-height: 1.5em;
  }
}

@media screen and (min-width: 52em) {
  .c0 {
    line-height: 1.666em;
  }
}

@media screen and (min-width: 40em) {
  .c0 {
    line-height: 1.25rem;
  }
}

@media screen and (min-width: 52em) {
  .c0 {
    line-height: 1.25rem;
  }
}

@media screen and (min-width: 64em) {
  .c0 {
    line-height: 1.25rem;
  }
}

<button
  class="c0"
  color="default"
  disabled=""
>
  <span
    class="c1 "
    my="2"
  >
    <div />
    <div />
    <div />
  </span>
</button>
`;

exports[`Primary Button as "default" color variant matches snapshot 1`] = `
.c0 {
  display: inline-flex;
  justify-content: center;
  align-items: center;
  text-decoration: none;
  transition: all 0.05s ease-in-out;
  border: 2px solid;
  font-weight: 600;
  border-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  font-family: -apple-system,system-UI,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif;
  font-size: 1rem;
  line-height: 1.5em;
  cursor: pointer;
  line-height: 1.25rem;
  color: #fff;
  background-color: #2a2a2a;
  border-color: #2a2a2a;
}

.c0:hover:not(:disabled),
.c0:focus:not(:disabled) {
  color: #fff;
  background-color: #f9423a;
  border-color: #f9423a;
}

.c0:disabled {
  opacity: 0.6;
}

@media screen and (min-width: 40em) {
  .c0 {
    line-height: 1.5em;
  }
}

@media screen and (min-width: 52em) {
  .c0 {
    line-height: 1.666em;
  }
}

@media screen and (min-width: 40em) {
  .c0 {
    line-height: 1.25rem;
  }
}

@media screen and (min-width: 52em) {
  .c0 {
    line-height: 1.25rem;
  }
}

@media screen and (min-width: 64em) {
  .c0 {
    line-height: 1.25rem;
  }
}

<button
  class="c0"
  color="default"
>
  text
</button>
`;

exports[`Primary Button as "highlight" color variant matches snapshot 1`] = `
.c0 {
  display: inline-flex;
  justify-content: center;
  align-items: center;
  text-decoration: none;
  transition: all 0.05s ease-in-out;
  border: 2px solid;
  font-weight: 600;
  border-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  font-family: -apple-system,system-UI,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif;
  font-size: 1rem;
  line-height: 1.5em;
  cursor: pointer;
  line-height: 1.25rem;
  color: #2a2a2a;
  background-color: #fff;
  border-color: #fff;
}

.c0:hover:not(:disabled),
.c0:focus:not(:disabled) {
  color: #fff;
  background-color: #2a2a2a;
  border-color: #2a2a2a;
}

.c0:disabled {
  opacity: 0.6;
  color: #f9423a;
}

@media screen and (min-width: 40em) {
  .c0 {
    line-height: 1.5em;
  }
}

@media screen and (min-width: 52em) {
  .c0 {
    line-height: 1.666em;
  }
}

@media screen and (min-width: 40em) {
  .c0 {
    line-height: 1.25rem;
  }
}

@media screen and (min-width: 52em) {
  .c0 {
    line-height: 1.25rem;
  }
}

@media screen and (min-width: 64em) {
  .c0 {
    line-height: 1.25rem;
  }
}

<button
  class="c0"
  color="highlight"
>
  text
</button>
`;

exports[`Primary Button as "inverse" color variant matches snapshot 1`] = `
.c0 {
  display: inline-flex;
  justify-content: center;
  align-items: center;
  text-decoration: none;
  transition: all 0.05s ease-in-out;
  border: 2px solid;
  font-weight: 600;
  border-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  font-family: -apple-system,system-UI,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif;
  font-size: 1rem;
  line-height: 1.5em;
  cursor: pointer;
  line-height: 1.25rem;
  color: #2a2a2a;
  background-color: #fff;
  border-color: #fff;
}

.c0:hover:not(:disabled),
.c0:focus:not(:disabled) {
  color: #fff;
  background-color: #f9423a;
  border-color: #f9423a;
}

.c0:disabled {
  opacity: 0.6;
}

@media screen and (min-width: 40em) {
  .c0 {
    line-height: 1.5em;
  }
}

@media screen and (min-width: 52em) {
  .c0 {
    line-height: 1.666em;
  }
}

@media screen and (min-width: 40em) {
  .c0 {
    line-height: 1.25rem;
  }
}

@media screen and (min-width: 52em) {
  .c0 {
    line-height: 1.25rem;
  }
}

@media screen and (min-width: 64em) {
  .c0 {
    line-height: 1.25rem;
  }
}

<button
  class="c0"
  color="inverse"
>
  text
</button>
`;

exports[`Secondary Button as "default" color variant matches snapshot 1`] = `
.c0 {
  display: inline-flex;
  justify-content: center;
  align-items: center;
  text-decoration: none;
  transition: all 0.05s ease-in-out;
  border: 2px solid;
  font-weight: 600;
  border-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  font-family: -apple-system,system-UI,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif;
  font-size: 1rem;
  line-height: 1.5em;
  cursor: pointer;
  line-height: 1.25rem;
  color: #2a2a2a;
  background-color: transparent;
  border-color: #2a2a2a;
}

.c0:hover:not(:disabled),
.c0:focus:not(:disabled) {
  color: #fff;
  background-color: #f9423a;
  border-color: #f9423a;
}

.c0:disabled {
  opacity: 0.6;
}

@media screen and (min-width: 40em) {
  .c0 {
    line-height: 1.5em;
  }
}

@media screen and (min-width: 52em) {
  .c0 {
    line-height: 1.666em;
  }
}

@media screen and (min-width: 40em) {
  .c0 {
    line-height: 1.25rem;
  }
}

@media screen and (min-width: 52em) {
  .c0 {
    line-height: 1.25rem;
  }
}

@media screen and (min-width: 64em) {
  .c0 {
    line-height: 1.25rem;
  }
}

<button
  class="c0"
  color="default"
>
  text
</button>
`;

exports[`Secondary Button as "highlight" color variant matches snapshot 1`] = `
.c0 {
  display: inline-flex;
  justify-content: center;
  align-items: center;
  text-decoration: none;
  transition: all 0.05s ease-in-out;
  border: 2px solid;
  font-weight: 600;
  border-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  font-family: -apple-system,system-UI,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif;
  font-size: 1rem;
  line-height: 1.5em;
  cursor: pointer;
  line-height: 1.25rem;
  color: #fff;
  background-color: transparent;
  border-color: #fff;
}

.c0:hover:not(:disabled),
.c0:focus:not(:disabled) {
  color: #fff;
  background-color: #2a2a2a;
  border-color: #2a2a2a;
}

.c0:disabled {
  opacity: 0.6;
}

@media screen and (min-width: 40em) {
  .c0 {
    line-height: 1.5em;
  }
}

@media screen and (min-width: 52em) {
  .c0 {
    line-height: 1.666em;
  }
}

@media screen and (min-width: 40em) {
  .c0 {
    line-height: 1.25rem;
  }
}

@media screen and (min-width: 52em) {
  .c0 {
    line-height: 1.25rem;
  }
}

@media screen and (min-width: 64em) {
  .c0 {
    line-height: 1.25rem;
  }
}

<button
  class="c0"
  color="highlight"
>
  text
</button>
`;

exports[`Secondary Button as "inverse" color variant matches snapshot 1`] = `
.c0 {
  display: inline-flex;
  justify-content: center;
  align-items: center;
  text-decoration: none;
  transition: all 0.05s ease-in-out;
  border: 2px solid;
  font-weight: 600;
  border-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  font-family: -apple-system,system-UI,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif;
  font-size: 1rem;
  line-height: 1.5em;
  cursor: pointer;
  line-height: 1.25rem;
  color: #fff;
  background-color: transparent;
  border-color: #fff;
}

.c0:hover:not(:disabled),
.c0:focus:not(:disabled) {
  color: #fff;
  background-color: #f9423a;
  border-color: #f9423a;
}

.c0:disabled {
  opacity: 0.6;
}

@media screen and (min-width: 40em) {
  .c0 {
    line-height: 1.5em;
  }
}

@media screen and (min-width: 52em) {
  .c0 {
    line-height: 1.666em;
  }
}

@media screen and (min-width: 40em) {
  .c0 {
    line-height: 1.25rem;
  }
}

@media screen and (min-width: 52em) {
  .c0 {
    line-height: 1.25rem;
  }
}

@media screen and (min-width: 64em) {
  .c0 {
    line-height: 1.25rem;
  }
}

<button
  class="c0"
  color="inverse"
>
  text
</button>
`;

exports[`Small Button in loading state matches snapshot 1`] = `
.c1 {
  display: inline-flex;
  text-align: center;
  margin-top: 8px;
  margin-bottom: 8px;
}

.c1 >div {
  background-color: #f4f4f4;
  width: 0.5rem;
  height: 0.5rem;
  border-radius: 100%;
  display: inline-block;
  animation: sk-bouncedelay 1.4s infinite ease-in-out both;
}

.c1 >div:nth-child(1) {
  animation-delay: -0.3s;
}

.c1 >div:nth-child(2) {
  animation-delay: -0.15s;
}

.c0 {
  display: inline-flex;
  justify-content: center;
  align-items: center;
  text-decoration: none;
  transition: all 0.05s ease-in-out;
  border: 2px solid;
  font-weight: 600;
  border-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  padding-bottom: 4px;
  font-family: -apple-system,system-UI,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif;
  font-size: 1rem;
  line-height: 1.5em;
  cursor: no-drop;
  line-height: 1.25rem;
  color: #fff;
  background-color: #2a2a2a;
  border-color: #2a2a2a;
}

.c0:hover:not(:disabled),
.c0:focus:not(:disabled) {
  color: #fff;
  background-color: #f9423a;
  border-color: #f9423a;
}

@media screen and (min-width: 40em) {
  .c0 {
    line-height: 1.5em;
  }
}

@media screen and (min-width: 52em) {
  .c0 {
    line-height: 1.666em;
  }
}

@media screen and (min-width: 40em) {
  .c0 {
    line-height: 1.25rem;
  }
}

@media screen and (min-width: 52em) {
  .c0 {
    line-height: 1.25rem;
  }
}

@media screen and (min-width: 64em) {
  .c0 {
    line-height: 1.25rem;
  }
}

<button
  class="c0"
  color="default"
  disabled=""
>
  <span
    class="c1 "
    my="2"
  >
    <div />
    <div />
    <div />
  </span>
</button>
`;

exports[`Small Button matches snapshot 1`] = `
.c0 {
  display: inline-flex;
  justify-content: center;
  align-items: center;
  text-decoration: none;
  transition: all 0.05s ease-in-out;
  border: 2px solid;
  font-weight: 600;
  border-radius: 4px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  padding-bottom: 4px;
  font-family: -apple-system,system-UI,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif;
  font-size: 1rem;
  line-height: 1.5em;
  cursor: pointer;
  line-height: 1.25rem;
  color: #fff;
  background-color: #2a2a2a;
  border-color: #2a2a2a;
}

.c0:hover:not(:disabled),
.c0:focus:not(:disabled) {
  color: #fff;
  background-color: #f9423a;
  border-color: #f9423a;
}

.c0:disabled {
  opacity: 0.6;
}

@media screen and (min-width: 40em) {
  .c0 {
    line-height: 1.5em;
  }
}

@media screen and (min-width: 52em) {
  .c0 {
    line-height: 1.666em;
  }
}

@media screen and (min-width: 40em) {
  .c0 {
    line-height: 1.25rem;
  }
}

@media screen and (min-width: 52em) {
  .c0 {
    line-height: 1.25rem;
  }
}

@media screen and (min-width: 64em) {
  .c0 {
    line-height: 1.25rem;
  }
}

<button
  class="c0"
  color="default"
>
  text
</button>
`;
